Forgot to mention that in the last commit, I rewrote the "Facility Name" element on the navbar so it is no longer a clickable button, and I gave it some additional styling. Changed the logo on the navbar so that it uses less screen space. Added a "skip to content" button that, when clicked, will move the page focus over to the main content of the page. I have made this button invisible by default, but it can be displayed by tabbing the focus over it using the tab key.

--- a/_spa/react-spa/src/static/css/navbar.css
+++ b/_spa/react-spa/src/static/css/navbar.css
@@ -146,3 +146,17 @@
   margin: 5px;
 }
 
+.skip-link {
+  position: absolute;
+  left: -100000px;
+}
+
+.skip-link:focus {
+  position: static;
+  height: 8vh;
+  font-weight: 500;
+  font-size: large;
+  width: 100%;
+  padding-left: 30px;
+}
+
